--- a/src/sass/settings/_form.combo.scss
+++ b/src/sass/settings/_form.combo.scss
@@ -9,3 +9,6 @@
 
 // Set form combo border width (according to `$form-element-border-size`).
 $form-combo-border-size: 1px !default;
+
+// Set form combo z-index.
+$form-combo-index: 1 !default;
